--- a/upload/admin/view/stylesheet/stylesheet.css
+++ b/upload/admin/view/stylesheet/stylesheet.css
@@ -55,6 +55,7 @@
 	color: #666666;
 	font-size: 15px;
 	line-height: 35px;
+	display:inline-block;
 }
 .box-heading h1 i {
 	margin-right: 5px;
@@ -72,6 +73,16 @@
 	border: 1px solid #DBDBDB;
 	padding: 5px;
 	margin-bottom: 15px;
+}
+
+.box-heading .buttons{
+	margin-bottom: 0px;
+	text-align: right;
+	padding: 3px;
+	border: 0px;
+	float: right;
+	position:relative;
+	display:inline-block;
 }
 
 .latest{
