--- a/upload/admin/view/stylesheet/stylesheet.css
+++ b/upload/admin/view/stylesheet/stylesheet.css
@@ -134,9 +134,11 @@
 	padding-bottom: 20px;
 	margin-bottom: 10px;
 }
-.help-block .icon-question-sign, .help-inline .icon-question-sign {
+.control-group .icon-question-sign {
+	color: #37A6CD;
 	font-size: 18px;
-	color: #00C3F4;
 	cursor: pointer;
 }
-*/
+.results {
+	float: right;
+}
