--- a/upload/admin/view/stylesheet/stylesheet.css
+++ b/upload/admin/view/stylesheet/stylesheet.css
@@ -61,7 +61,7 @@
 	margin-bottom: 15px;
 }
 .box-heading {
-	padding: 0px 10px;
+	padding: 0px 15px;
 	border: 1px solid #DBDBDB;
 	background: #EFEFEF;
 	-webkit-border-radius: 7px 7px 0px 0px;
@@ -73,14 +73,17 @@
 	margin: 0px;
 	padding: 0px;
 	color: #666666;
-	font-size: 15px;
+	font-size: 19px;
+	font-weight: normal;
+	text-shadow: 1px 1px 0px #FFFFFF;	
 	line-height: 32px;
 	display:inline-block;
 	padding-top: 3px;
 }
 .box-heading h1 i {
-	font-size: 17px;
+	font-size: 20px;
 	font-weight: normal;
+	color: #00C3F4;
 	margin-right: 5px;
 }
 .box-content {
@@ -172,7 +175,7 @@
 	content: ':';
 }
 .required .control-label:before {
-	content: '*';
+	content: '* ';
 	color: #B94A48;
 }
 
