Pull from master

--- a/upload/admin/view/stylesheet/stylesheet.css
+++ b/upload/admin/view/stylesheet/stylesheet.css
@@ -214,7 +214,6 @@ footer a {
 .btn-sm, .btn-xs {
   padding: 5px 10px;
   font-size: 11px;
-  line-height: 1.5;
   border-radius: 3px;
 }
 .btn-xs {
@@ -265,4 +264,14 @@ input.form-control, select.form-control {
 }
 .pagination {
 	margin: 0;
+}
+.modal.fade .modal-dialog {
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+     -moz-transition: -moz-transform 0.3s ease-out;
+       -o-transition: -o-transform 0.3s ease-out;
+          transition: transform 0.3s ease-out;
+}
+
+.modal.in .modal-dialog {
+
 }
